--- a/Calculator Website.html
+++ b/Calculator Website.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Caclulator Styling.css" />
+    <meta name="viewpo
+    rt" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="CaclulatorStyling.css" />
     <title>Calculator</title>
 </head>
 <body>
@@ -36,6 +37,6 @@
         </div>
     </div>
 
-    <script src="Calculator Logic.js"></script>
+    <script src="CalculatorLogic.js"></script>
 </body>
 </html>
